2005-03-08  Dan Winship  <danw@novell.com>

	* libstetic/GladeException.cs: exception class for Glade import problems

	* libstetic/GladeUtils.cs:
	* libstetic/ObjectWrapper.cs:
	* libstetic/wrapper/Container.cs: use GladeException

	* libstetic/GladeUtils.cs (Hydrate): Call g_type_class_ref() and
	pass the GObjectClass* to the glue methods rather than the GType*
	(to save a bunch of lookups).

	* glue/value.c (stetic_g_value_init_for_property,
	stetic_g_value_init_for_child_property): Update for that

	* stetic/Glade.cs: renamed from GladeImport.cs
	(Import): renamed from Load. Use GladeException.

	* libstetic/wrapper/Box.cs (Sync): Fix to not crash on empty boxes

2005-03-08  Dan Winship  <danw@novell.com>

	* libstetic/GladeUtils.cs (ExtractProperty, CreateWidget,
	SetProps, SetPacking): Make these all take a Hashtable of
	propname->value rather than a pair of ArrayLists.

	* libstetic/ObjectWrapper.cs (Wrap): make this public
	(GladeImport): take a Hashtable rather than ArrayLists
	
	* libstetic/wrapper/*.cs:
	* stetic/GladeImport.cs: update for those

2005-03-03  Todd Berman  <tberman@off.net>

	* stetic/Stetic.cs: Add a ShadowType.In to the widget TreeView.

2005-03-03  Dan Winship  <danw@novell.com>

	* libstetic/DND.cs: static class to handle various
	drag-and-drop-related stuff, so WidgetFactory doesn't need to
	subclass WidgetSite, which is nice since they're not really very
	related.
	(SourceSet): wrapper for Gtk.Drag.SourceSet that can also set up
	drag tracking for widgets that can't use SourceSet.
	(DestSet, DestUnset): more wrappers
	(CanDrag): for non automatic sources, checks if a
	MotionNotifyEvent counts as a drag start
	(Drag): starts a drag
	(Drop): receives the dropped widget
	(DragBegin, DragEnd): moved here from IStetic

	* libstetic/WidgetSite.cs: remove static DND-related fields
	(various): use DND methods rather than Gtk.Drag or IStetic ones
	(OnButtonPressEvent): don't need to track click locations any
	more; DND does it.